--- a/PART_6_React_Basic/employers/package.json
+++ b/PART_6_React_Basic/employers/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "employers",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -36,4 +36,3 @@
     ]
   }
 }
-
